# deep_nature_alliance

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  convertImage.py  gray_256.txt  moon.txt  moon_manual.txt  new 1.txt  script.txt  shadback.txt  shiptex.png:Zone.Identifier  story.txt
include/engine/: application.h  camera.h  collidable.h  collision_data.h  control.h  defines.h  light.h  local_paths.h  mesh.h  node_types.h  path_config.h  path_config.h.in  random.h  resource.h  resource_manager.h  scene_graph.h  scene_node.h  shader.h  texture.h  transform.h  view.h
include/game/: agent.h  asteroid.h  beacon.h  collision_manager.h  enemy.h  explosion.h  fp_player.h  game.h  game_data.h  item.h  menu_controller.h  mooncloud.h  mooneye.h  player.h  rocket.h  skybox.h  story_data.h  terrain.h  terrain_data.h  terrain_moon.h  text.h  thrust.h  toggle.h  tp_player.h  tree.h  tree_grower.h  trigger.h
include/game/colliders/: colliders.h
libs/lib/: glew32s.lib  glew32sd.lib  glfw3.lib  glfw3d.lib
resources/: cactus-pack.zip:Zone.Identifier  dagger.mtl  dcs2.mtl  medieval-stone-tower.zip:Zone.Identifier  medieval_stone_tower.glb:Zone.Identifier  moontower.mtl
resources/meshes/: computer.mtl  dnafighter.mtl  moonobj.mtl  ship_inside.mtl
resources/scripts/: convertImage.py  moon2.txt  mountain_hm_n.txt
resources/shaders/: bees_fp.glsl  bees_gp.glsl  bees_vp.glsl  cooltangents.txt  depth_fp.glsl  depth_instanced_vp.glsl  depth_vp.glsl  desert_heat_vision_fp.glsl  dither_fp.glsl  explosion_fp.glsl  explosion_gp.glsl  explosion_vp.glsl  instanced_normal_map_vp.glsl  lit_fp.glsl  lit_lava_fp.glsl  lit_vp-mess.glsl  lit_vp.glsl  material_fp.glsl  material_vp.glsl  normal_map_fp.glsl  normal_map_noshadows_fp.glsl  normal_map_vp.glsl  particle_vp.glsl  passthrough_fp.glsl  passthrough_vp.glsl  passthrough_with_transform_vp.glsl  poop_lit_vp.glsl  red_vision_fp.glsl  red_vision_vp.glsl  shad_fp.glsl  shad_vp.glsl  ship_fp.glsl  ship_vp.glsl  show_depth_fp.glsl  skybox_fp.glsl  skybox_vp.glsl  snow_fp.glsl  snow_gp.glsl  snow_vp.glsl  spacebug_fp.glsl  (+12 more)
resources/textures/: moontree.mtl
resources/ui/: splash.xcf  startbutton.xcf  worldselectbutton.xcf
src/: main.cpp
src/engine/: application.cpp  camera.cpp  collidable.cpp  control.cpp  light.cpp  mesh.cc  mesh.cpp  random.cpp  resource.cpp  resource_manager.cpp  scene_graph.cpp  scene_node.cpp  shader.cc  shader.cpp  texture.cpp  transform.cpp  view.cpp
src/game/: agent.cpp  asteroid.cpp  beacon.cpp  collision_manager.cpp  enemy.cpp  explosion.cpp  fp_player.cpp  game.cpp  item.cpp  menu_controller.cpp  mooncloud.cpp  mooneye.cpp  moonterrain.cpp  player.cpp  rocket.cpp  terrain.cpp  text.cpp  thrust.cpp  toggle.cpp  tp_player.cpp  tree.cpp  trigger.cpp
src/game/colliders/: colliders.cpp
